2013-02-17  Craig DeForest  <deforest@boulder.swri.edu>

	* src/datafile.c (df_readbinary):  Add special case code to read in a
	uniform binary matrix in one large chunk rather than reading one matrix
	element at a time.  When piping a 2000x2000 RGB matrix under linux this
	speeds the input stage from about 9 seconds to about 2 seconds.

2013-02-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c:
	-d or --default-settings Skip reading gnuplotrc and ~/.gnuplot on entry.

	* src/plot.c:
	Don't assume that X11_args() is there to help parse command line options.
	Bug #3601907

2013-02-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (invalid_command): When an invalid command is detected,
	advance the input parsing pointer (c_token) to the end of the command.
	Otherwise we're left in the middle of an invalid command after the
	error message is printed.

	* src/command.c (read_line):  Reset the token count to zero when
	starting to read a new line of input.  Otherwise if the read is
	interrupted by a mouse event requesting a replot then the internal
	state is not valid.  Test case:   cat | ./gnuplot      plot and zoom
	Bug #3602388

	* src/term.c (term_apply_lp_properties):  Always apply linetype color,
	even if the flag use_palette in not set.  Many terminals cope with this
	on their own, but not all of them (e.g. cairolatex).
	Bug #3599916

2013-02-08  Ethan A Merritt  <merritt@u.washington.edu>

	* util.c (gprintf):  Initialize output buffer so that an empty format
	does not leave an unitialized string.  Test case:
	set format "%B %b"; plot x

2013-01-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_timefmt):  Accept the new format as a string variable.
	Bug #3602057

2013-01-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/hidden3d.c:  Up until now hidden3d handled any pm3d surfaces as
	a collection of points, which did essentially nothing at all.  Now we