@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.297.2.19 2013/02/11 00:57:35 sfeam Exp $
+dnl $Id: configure.in,v 1.297.2.20 2013/02/17 21:54:37 sfeam Exp $
 dnl
 dnl this is actually major.minor ...
 dnl note that for a non-beta release, we need to
@@ -244,7 +244,7 @@ AC_CHECK_FUNCS(atexit memcpy memmove memset \
   setvbuf strerror strchr strrchr strstr \
   index rindex \
   erf erfc gamma lgamma \
-  getcwd poll pclose popen select sleep stpcpy \
+  getcwd poll pclose popen fdopen select sleep stpcpy \
   strcspn strdup strndup strnlen strcasecmp stricmp strncasecmp strnicmp \
   sysinfo tcgetattr vfprintf doprnt usleep
 )
