@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.701.2.25 2012/12/17 05:35:01 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.701.2.26 2013/02/17 21:54:38 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -5789,6 +5789,15 @@ Ffigure_mapcontours
 
  While this approach is most flexible, it is possible to achieve simple
  filtering with the `using` or `thru` keywords.
+
+ On systems with an fdopen() function, data can be read from an arbitrary file
+ descriptor attached to either a file or pipe.  To read from file descriptor
+ `n` use `'<&n'`.  This allows you to easily pipe in several data files in a
+ single call from a POSIX shell:
+
+       $ gnuplot -p -e "plot '<&3', '<&4'" 3<data-3 4<data-4
+       $ ./gnuplot 5< <(myprogram -with -options)
+       gnuplot> plot '<&5'
 4 thru
 ?commands plot datafile thru
 ?plot datafile thru
