@@ -4,6 +4,7 @@ New features, changes and fixes since gnuplot version 4.6.1
 * NEW Allow the "bind" command to attach a user command to mouse button 1
 * NEW hidden3d can handle occlusion by pm3d surfaces (as in hidden2.dem)
 * NEW -d option from command line skips ~/.gnuplot initialization file
+* NEW plot '<&N' plots from file descriptor N opened during shell invocation
 * CHANGE "unset term" restores original default terminal (GNUTERM)
 * CHANGE ignore extraneous trailing comma in a plot command
 * CHANGE special case code for faster input of uniform binary matrix data
